--- a/package.json
+++ b/package.json
@@ -6,22 +6,60 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.4",
+    "@hookform/resolvers": "^3.3.4",
+    "@langchain/community": "^0.0.20",
+    "@langchain/openai": "^0.0.12",
+    "@langchain/pinecone": "^0.0.1",
+    "@prisma/client": "^5.8.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.28.2",
+    "ai": "^2.2.31",
+    "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "langchain": "^0.1.6",
+    "lucide-react": "^0.314.0",
+    "next": "14.1.0",
+    "next-cloudinary": "^5.20.0",
+    "next-themes": "^0.2.1",
+    "openai": "^4.25.0",
+    "openai-edge": "^1.2.2",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.49.3",
+    "react-spinners": "^0.13.8",
+    "replicate": "^0.18.1",
+    "stripe": "^14.13.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prisma": "^5.8.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
