--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@langchain/community": "^0.0.20",
     "@langchain/openai": "^0.0.12",
     "@langchain/pinecone": "^0.0.1",
-    "@prisma/client": "^5.20.0",
+    "@pinecone-database/pinecone": "^0.1.6",
+    "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -31,7 +32,7 @@
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "langchain": "^0.1.6",
+    "langchain": "^0.0.150",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "next-cloudinary": "^5.20.0",
